# boat-core-v2

./: .config.toml.swp  Cargo.toml  Dockerfile  README.md  boat-core-v2.service  build.sh  config.toml  config.toml.save  docker-compose.yml  enable_vcan.sh  install_vcan.sh  start-boat-core-v2.sh  test_vcan.sh
.github/workflows/: docker.yml
src/: main.rs
src/can/: ids.rs  mod.rs
src/component/: mod.rs
src/component/bms/: main_thread.rs  mod.rs  read_thread.rs  structs.rs
src/component/computed/: mod.rs  power.rs  sensor_fusion.rs
src/component/gps/: mod.rs
src/component/imu/: mod.rs
src/component/lte/: mod.rs
src/component/motor_status/: mod.rs
src/component/pmu/: mod.rs
src/component/system_stats/: mod.rs
src/component/vesc/: can_messages.rs  mod.rs  read_thread.rs
src/helper/: logging.rs  mod.rs  serial_ext.rs
src/messaging/: app_message.rs  mod.rs  serial_ext.rs
src/transport/: metric_queue.rs  mod.rs  web_socket_client.rs  web_socket_server.rs
