[package]
name = "boat-core-v2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.1"
async-trait = "0.1.72"
tokio = { version = "1.30.0", features = ["full"] }
tokio-tungstenite = "*"
futures = "0.3.28"
lazy_static = "1.4.0"
socketcan = { version = "3.3.0", features = ["default", "tokio"]}
systemstat = "0.2.3"
log = "0.4.20"
simple_logger = "4.2.0"
num-traits = "0.2.16"
num-derive = "0.4.0"
tokio-serial = "5.4.1"
prost = "0.12"
tokio-util = { version = "0.7.9", features = ["codec"] }
serde_json = "1.0.111"
nalgebra = "0.32.3"
pbjson-types = "0.6.0"
chrono = "0.4.31"
nmea-parser = "0.10.0"
cpu-freq = "0.0.2"
wannsea_types = { git = "https://github.com/WannSea/type-lib.git" }
eskf = { git = "https://github.com/nordmoen/eskf-rs.git" }
